typo in the text

--- a/ML_HW_№2_Rum.ipynb
+++ b/ML_HW_№2_Rum.ipynb
@@ -2387,7 +2387,7 @@
         "id": "eU2Y5oI8s5B2"
       },
       "source": [
-        "> Для модели дерева `Target Encoding` является более подходящим методом кодирования для деревьев решений благодаря своей способности сохранять информацию о целевой переменной и избегать увеличения размерности данных.\n",
+        "> `Target Encoding` является более подходящим методом кодирования для деревьев решений благодаря своей способности сохранять информацию о целевой переменной и избегать увеличения размерности данных.\n",
         "\n"
       ]
     },
@@ -2471,8 +2471,8 @@
   ],
   "metadata": {
     "colab": {
-      "toc_visible": true,
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": ".venv",
